tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_67.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((- 0) MOD (y MOD y)) - ((+ z) + (x DIV 1))) < (+ (- (y MOD 1))));
               x := (- (+ (+ (+ y))));
               q := ((((z - y) DIV (2 * y)) < ((- y) + (y * 1223))) OR ((- (2 * z)) >= ((y + 1223) DIV (x MOD 1))));
               p := ((((200 - 2) - (z DIV 200)) MOD ((0 * z) - (z * 1223))) < (((- z) * (1223 DIV z)) * ((0 * 1) DIV (1 DIV y))));
  (* error *)  p := (((- (p DIV z)) DIV ((y - 1) DIV (x * x))) # (+ ((x * 2) MOD (x DIV 0))));
               q := ((((0 + 1) MOD (1223 * 1)) MOD ((0 MOD y) DIV (0 * 1))) = (((2 MOD 1223) * (z MOD 2)) MOD (+ (0 DIV 1223))));
               x := ((- ((1 - 1) MOD (0 MOD 0))) MOD (+ ((x MOD 200) MOD (x DIV z))));
               z := ((+ ((1 MOD z) * (x - 1))) DIV (((+ z) DIV (2 + z)) + ((0 MOD z) DIV (x - 1223))));
               y := (((- (1 MOD z)) - (- (1 MOD 2))) DIV ((- (0 - 1)) + (- (- y))));
               q := ((((y MOD 200) * (200 - y)) * ((x MOD y) + (z + y))) = (((- 0) - (y MOD 2)) MOD ((2 - 0) - (0 - y))))
END Test15.